--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/plain.png" />
+    <link rel="icon" type="image/jpeg" href="/download.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Plainview</title>
+    <title>Safe Software</title>
   </head>
   <body>
     <div id="root"></div>
